--- a/templates/conventions/step6.html
+++ b/templates/conventions/step6.html
@@ -8,6 +8,11 @@
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
           <h2>Etape 6/{{ nb_steps }} - Détails des logements</h2>
+          <h4 class="warning-notification">
+            <span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true"></span>
+            Cet écran est en cours de développement et n'est pas encore fonctionnel<br>
+            Merci de votre compréhension
+          </h3>
           {% include "common/convention_edit_info.html" with convention=convention %}
           {% include "common/mandatory_fields_info.html" %}
 
