All fields are mandatory

--- a/templates/conventions/step6.html
+++ b/templates/conventions/step6.html
@@ -58,15 +58,15 @@
 
                 <thead>
                 <tr>
-                  <th scope="col" style='min-width:200px;'>Désignation</th>
-                  <th scope="col" style='min-width:150px;'>Type</th>
-                  <th scope="col" style='min-width:120px;'>Surface habitable</th>
-                  <th scope="col" style='min-width:120px;'>Surface des annexes<br>Réelle</th>
-                  <th scope="col" style='min-width:120px;'>Surface des annexes<br>Retenue dans la SU</th>
-                  <th scope="col" style='min-width:120px;'>Surface Utile</th>
-                  <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m2 de surface utile</th>
-                  <th scope="col" style='min-width:120px;'>Coefficient propre au logement</th>
-                  <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en €</th>
+                  <th scope="col" style='min-width:200px;'>Désignation {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:150px;'>Type {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Surface habitable {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Surface des annexes réelle {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Surface des annexes retenue dans la SU {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Surface Utile {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Loyer maxinum en € par m2 de surface utile {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Coefficient propre au logement {% include "common/mandatory_field.html" %}</th>
+                  <th scope="col" style='min-width:120px;'>Loyer maxinum du logement en € {% include "common/mandatory_field.html" %}</th>
                 </tr>
                 </thead>
                 <tbody>
