--- a/templates/conventions/step6.html
+++ b/templates/conventions/step6.html
@@ -16,38 +16,7 @@
           {% include "common/convention_edit_info.html" with convention=convention %}
           {% include "common/mandatory_fields_info.html" %}
 
-          <p>Pour éditer vos logements, il vous suffit de télécharger le modèle ci-dessous, d'ajouter ou de modifier votre liste de logements, puis de le téléverser à nouveau.<br>
-          <span class="fr-fi-alert-line fr-mr-1w" aria-hidden="true">Attention, la liste des logements téléversée écrase la liste courante.</p>
-
-          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
-
-            <button type="button" class="fr-btn" onclick="location.href='{% url 'conventions:load_xlsx_model' convention_uuid=convention.uuid file_type='logements' %}'">
-              <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Télécharger le modèle !
-            </button>
-          </div>
-          <div class="fr-my-3w">Puis</p>
-          <div class="fr-grid-row fr-grid-row--gutters fr-ml-3w">
-            <div>
-              <button name="Upload" value=True class="fr-btn">
-                <span class="fr-fi-file-download-line fr-mr-1w" aria-hidden="true"></span>Téléverser le fichier de vos prêts
-              </button>
-            </div>
-            <div class="fr-ml-3w">
-              <input
-                class="fr-input {% if upform.file.errors %}fr-input--error{% endif %}"
-                aria-describedby="text-input-error-desc-error"
-                type="file"
-                id="{{upform.file.id_for_label}}"
-                name="{{upform.file.html_name}}"
-                value="{{ upform.file.value|default_if_none:'' }}">
-              {% for error in upform.file.errors %}
-                <p id="text-input-error-desc-error" class="fr-error-text">
-                  {{ error }}
-                </p>
-              {% endfor %}
-            </div>
-
-          </div>
+          {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements' upform=upform  what='logements'%}
 
           <hr class="fr-col-12 fr-my-3w">
 
@@ -106,134 +75,25 @@
                     {% endfor %}
                   </td>
                   <td>
-                    <input
-                      class="fr-input {% if form.surface_habitable.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.surface_habitable.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.surface_habitable.id_for_label}}"
-                      name="{{form.surface_habitable.html_name}}"
-                      value="{{ form.surface_habitable.value|default_if_none:'' }}">
-                    {% for error in form.surface_habitable.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
-
+                    {% include "common/form/input_number.html" with form_input=form.surface_habitable step="0.01" %}
                   </td>
                   <td>
-
-                    <input
-                      class="fr-input {% if form.surface_annexes.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.surface_annexes.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.surface_annexes.id_for_label}}"
-                      name="{{form.surface_annexes.html_name}}"
-                      value="{{ form.surface_annexes.value|default_if_none:'' }}">
-                    {% for error in form.surface_annexes.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
-
+                    {% include "common/form/input_number.html" with form_input=form.surface_annexes step="0.01" %}
                   </td>
                   <td>
-
-                    <input
-                      class="fr-input {% if form.surface_annexes_retenue.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.surface_annexes_retenue.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.surface_annexes_retenue.id_for_label}}"
-                      name="{{form.surface_annexes_retenue.html_name}}"
-                      value="{{ form.surface_annexes_retenue.value|default_if_none:'' }}">
-                    {% for error in form.surface_annexes_retenue.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_number.html" with form_input=form.surface_annexes_retenue step="0.01" %}
                   </td>
                   <td>
-                    <input
-                      class="fr-input {% if form.surface_utile.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.surface_utile.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.surface_utile.id_for_label}}"
-                      name="{{form.surface_utile.html_name}}"
-                      value="{{ form.surface_utile.value|default_if_none:'' }}">
-                    {% for error in form.surface_utile.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_number.html" with form_input=form.surface_utile step="0.01" %}
                   </td>
                   <td>
-                    <input
-                      class="fr-input {% if form.loyer_par_metre_carre.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.loyer_par_metre_carre.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.loyer_par_metre_carre.id_for_label}}"
-                      name="{{form.loyer_par_metre_carre.html_name}}"
-                      value="{{ form.loyer_par_metre_carre.value|default_if_none:'' }}">
-                    {% for error in form.loyer_par_metre_carre.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_number.html" with form_input=form.loyer_par_metre_carre step="0.01" %}
                   </td>
                   <td>
-                    <input
-                      class="fr-input {% if form.coeficient.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.coeficient.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.coeficient.id_for_label}}"
-                      name="{{form.coeficient.html_name}}"
-                      value="{{ form.coeficient.value|default_if_none:'' }}">
-                    {% for error in form.coeficient.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_number.html" with form_input=form.coeficient step="0.001" %}
                   </td>
                   <td>
-                    <input
-                      class="fr-input {% if form.loyer.errors %}fr-input--error{% endif %}"
-                      pattern="[0-9]*"
-                      min=0
-                      step="0.01"
-                      inputmode="numeric"
-                      {% if form.loyer.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                      type="number"
-                      id="{{form.loyer.id_for_label}}"
-                      name="{{form.loyer.html_name}}"
-                      value="{{ form.loyer.value|default_if_none:'' }}">
-                    {% for error in form.loyer.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_number.html" with form_input=form.loyer step="0.01" %}
                   </td>
                 </tr>
                 {% endfor %}
