--- a/templates/conventions/step3.html
+++ b/templates/conventions/step3.html
@@ -81,21 +81,7 @@
                   <label class="fr-label" for="{{form.nb_logements.id_for_label}}">
                     Nombre de logements {% include "common/mandatory_field.html" %}
                   </label>
-                  <input
-                    class="fr-input {% if form.nb_logements.errors %}fr-input--error{% endif %}"
-                    pattern="[0-9]*"
-                    min=0
-                    inputmode="numeric"
-                    {% if form.nb_logements.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                    type="number"
-                    id="{{form.nb_logements.id_for_label}}"
-                    name="nb_logements"
-                    value="{{ form.nb_logements.value|default_if_none:'' }}">
-                  {% for error in form.nb_logements.errors %}
-                  <p id="text-input-error-desc-error" class="fr-error-text">
-                    {{ error }}
-                  </p>
-                  {% endfor %}
+                  {% include "common/form/input_number.html" with form_input=form.nb_logements %}
                 </div>
               </div>
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w fr-mt-3w">
@@ -179,21 +165,7 @@
                   <label class="fr-label" for="{{form.nb_locaux_commerciaux.id_for_label}}">
                     Locaux commerciaux
                   </label>
-                  <input
-                    class="fr-input {% if form.nb_locaux_commerciaux.errors %}fr-input--error{% endif %}"
-                    pattern="[0-9]*"
-                    min=0
-                    inputmode="numeric"
-                    {% if form.nb_locaux_commerciaux.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                    type="number"
-                    id="{{form.nb_locaux_commerciaux.id_for_label}}"
-                    name="nb_locaux_commerciaux"
-                    value="{{ form.nb_locaux_commerciaux.value|default_if_none:0 }}">
-                  {% for error in form.nb_locaux_commerciaux.errors %}
-                  <p id="text-input-error-desc-error" class="fr-error-text">
-                    {{ error }}
-                  </p>
-                  {% endfor %}
+                  {% include "common/form/input_number.html" with form_input=form.nb_locaux_commerciaux %}
                 </div>
               </div>
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
@@ -201,21 +173,7 @@
                   <label class="fr-label" for="{{form.nb_bureaux.id_for_label}}">
                     Bureaux
                   </label>
-                  <input
-                    class="fr-input {% if form.nb_bureaux.errors %}fr-input--error{% endif %}"
-                    pattern="[0-9]*"
-                    min=0
-                    inputmode="numeric"
-                    {% if form.nb_bureaux.errors %}aria-describedby="text-input-error-desc-error"{% endif %}
-                    type="number"
-                    id="{{form.nb_bureaux.id_for_label}}"
-                    name="nb_bureaux"
-                    value="{{ form.nb_bureaux.value|default_if_none:0 }}">
-                  {% for error in form.nb_bureaux.errors %}
-                  <p id="text-input-error-desc-error" class="fr-error-text">
-                    {{ error }}
-                  </p>
-                  {% endfor %}
+                  {% include "common/form/input_number.html" with form_input=form.nb_bureaux %}
                 </div>
               </div>
             </div>
@@ -226,17 +184,7 @@
             <label class="fr-label" for="{{form.autre_locaux_hors_convention.id_for_label}}">
               Autres
             </label>
-            <textarea
-              class="fr-input {% if form.autre_locaux_hors_convention.errors %}fr-input--error{% endif %}"
-              aria-describedby="text-input-error-desc-error"
-              type="text" id="{{form.autre_locaux_hors_convention.id_for_label}}"
-              name="autre_locaux_hors_convention"
-              rows="3">{{ form.autre_locaux_hors_convention.value|default_if_none:'' }}</textarea>
-            {% for error in form.autre_locaux_hors_convention.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_text.html" with form_input=form.autre_locaux_hors_convention %}
           </div>
 
 
