--- a/templates/conventions/step4.html
+++ b/templates/conventions/step4.html
@@ -132,17 +132,7 @@
               </button>
               <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
             </label>
-            <textarea
-              class="fr-input {% if form.vendeur.errors %}fr-input--error{% endif %}"
-              aria-describedby="text-input-error-desc-error"
-              type="text" id="{{form.vendeur.id_for_label}}"
-              name="vendeur"
-              rows="5">{{ form.vendeur.value|default_if_none:'' }}</textarea>
-            {% for error in form.vendeur.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_text.html" with form_input=form.vendeur rows=5 %}
           </div>
 
 
@@ -156,17 +146,7 @@
               </button>
               <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
             </label>
-            <textarea
-              class="fr-input {% if form.acquereur.errors %}fr-input--error{% endif %}"
-              aria-describedby="text-input-error-desc-error"
-              type="text" id="{{form.acquereur.id_for_label}}"
-              name="acquereur"
-              rows="5">{{ form.acquereur.value|default_if_none:'' }}</textarea>
-            {% for error in form.acquereur.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_text.html" with form_input=form.acquereur rows=5 %}
           </div>
 
 
@@ -178,17 +158,7 @@
               </button>
               <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
             </label>
-            <textarea
-              class="fr-input {% if form.reference_notaire.errors %}fr-input--error{% endif %}"
-              aria-describedby="text-input-error-desc-error"
-              type="text" id="{{form.reference_notaire.id_for_label}}"
-              name="reference_notaire"
-              rows="5">{{ form.reference_notaire.value|default_if_none:'' }}</textarea>
-            {% for error in form.reference_notaire.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_text.html" with form_input=form.reference_notaire rows=5 %}
           </div>
 
 
@@ -200,17 +170,7 @@
               </button>
               <i class="fr-text--sm">ou remplissez le champ ci-dessous</i>
             </label>
-            <textarea
-              class="fr-input {% if form.reference_publication_acte.errors %}fr-input--error{% endif %}"
-              aria-describedby="text-input-error-desc-error"
-              type="text" id="{{form.reference_publication_acte.id_for_label}}"
-              name="reference_publication_acte"
-              rows="5">{{ form.reference_publication_acte.value|default_if_none:'' }}</textarea>
-            {% for error in form.reference_publication_acte.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_text.html" with form_input=form.reference_publication_acte rows=5 %}
           </div>
 
         </div>
