--- a/templates/conventions/step5.html
+++ b/templates/conventions/step5.html
@@ -16,19 +16,7 @@
             <label class="fr-label" for="{{form.date_fin_conventionnement.id_for_label}}">
               Durée de la convention
             </label>
-            <div class="fr-input-wrap fr-fi-calendar-line fr-mt-1w" >
-              <input
-                class="fr-input {% if form.date_fin_conventionnement.errors %}fr-input--error{% endif %}"
-                type="date"
-                id="{{form.date_fin_conventionnement.id_for_label}}"
-                name="date_fin_conventionnement"
-                value="{{ form.date_fin_conventionnement.value }}">
-            </div>
-            {% for error in form.date_fin_conventionnement.errors %}
-            <p id="text-input-error-desc-error" class="fr-error-text">
-              {{ error }}
-            </p>
-            {% endfor %}
+            {% include "common/form/input_date.html" with form_input=form.date_fin_conventionnement %}
           </div>
 
           <hr class="fr-col-12 fr-my-3w">
@@ -69,19 +57,7 @@
                     {% endfor %}
                   </td>
                   <td>
-                    <div class="fr-input-wrap fr-fi-calendar-line" >
-                      <input
-                        class="fr-input {% if form_pret.date_octroi.errors %}fr-input--error{% endif %}"
-                        type="date"
-                        id="{{form_pret.date_octroi.id_for_label}}"
-                        name="{{form_pret.date_octroi.html_name}}"
-                        value="{{ form_pret.date_octroi.value }}">
-                    </div>
-                    {% for error in form_pret.date_octroi.errors %}
-                    <p id="text-input-error-desc-error" class="fr-error-text">
-                      {{ error }}
-                    </p>
-                    {% endfor %}
+                    {% include "common/form/input_date.html" with form_input=form_pret.date_octroi %}
                   </td>
                   <td>
                     {% include "common/form/input_number.html" with form_input=form_pret.duree %}
